# destination_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  router.rs
src/auth/: app_context.rs  auth.rs  mod.rs
src/db/: client.rs  destination.rs  error.rs  mod.rs
src/handler/: destination.rs  error.rs  mod.rs
src/model/: destination.rs  mod.rs
tests/: destination.rs
