[package]
name = "destination_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.3"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"
json = "0.12.4"
serde_json = "1.0.91"
axum = "0.6.1"
uuid = { version = "1.2.2", features = ["v4"]  }
anyhow = "1.0.68"
thiserror = "1.0.38"

[dev-dependencies]
tower = "0.4.13"
hyper = "0.14.24"
mockall = "0.11.3"
