[package]
name = "destination_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version = "0.22.3", features = ["aio", "tokio-comp", "connection-manager"]}
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"
json = "0.12.4"
serde_json = "1.0.91"
axum = { version = "0.6.1", features = ["headers"] }
jsonwebtoken = "8.0"
uuid = { version = "1.2.2", features = ["v4"]  }
anyhow = "1.0.68"
thiserror = "1.0.38"
hyper = { version = "0.14.24", features = ["client"] }
hyper-tls = "0.5.0"

[dev-dependencies]
tower = "0.4.13"
mockall = "0.11.3"
